--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <title>GATORADE</title>
+  <link rel="shortcut icon" href="Imagenes/logo-nav.svg" type="image/x-icon">
+  <title> Index | Gatorade </title>
   <link rel="stylesheet" href="Estilos/header.css">
   <link rel="stylesheet" href="Estilos/style.css">
   <link rel="stylesheet" href="Estilos/navbar.css">
+  <link rel="stylesheet" href="Estilos/footer.css">
+  <link rel="stylesheet" href="Estilos/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/8fb73b6fbd.js" crossorigin="anonymous"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Kanit:ital,wght@1,100&family=Oswald:wght@600&family=Poppins&display=swap"
+    rel="stylesheet">
 
 <body>
   <nav>
-    <img src="Imagenes/logo-nav.svg" alt="imagen logo Gatorade">
-    <ul>
+    <img src="Imagenes/logo-nav.svg" alt="imagen logo Gatorade" id="logo-nav">
+    <ul id="ul-navbar">
       <li>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
         <a href="shop.html">Shop</a>
@@ -29,32 +35,56 @@
         <a href="nosotros.html">Nosotros</a>
       </li>
       <li>
-        <a href="carro.html">Carro</a>
+        <a href="contacto.html">Contacto</a>
       </li>
     </ul>
   </nav>
+  <header id="header" style="background-image: url(/Imagenes/img-fondo-index.jpg);" >
+    <div id="title-conteiner">
+      <div>
+        <p class="title-header" id="title-primario">CON LA EFICACIA QUE LO CARACTERIZA, GATORADE PRESENTA, ZERO PROTEIN
+        </p>
+      </div>
+      <div>
+        <p class="title-header" id="title-secundario">GATORADE PRESENTÓ UNA NOVEDAD EN EL PAÍS DESARROLLANDO SU LÍNEA
+          PROTEICA DE LA MANO DE LA PRESENTACIÓN DE "ZERO WITH PROTEIN".</p>
+      </div>
+    </div>
+  </header>
   <main>
-    <header id="header">
-      <div id="title-conteiner">
-        <div>
-          <p class="title-header" id="title-primario">CON LA EFICACIA QUE LO CARACTERIZA, GATORADE PRESENTA, ZERO PROTEIN</p>
+    <section>
+      <div class="grid-container">
+        <div class="grid-item grid-img">
+          <img src="Imagenes/img-gatorade-inclusivo.jpg" alt="Triatlon inclusivo" class="img-main">
         </div>
-        <div>
-          <p class="title-header" id="title-secundario">GATORADE PRESENTÓ UNA NOVEDAD EN EL PAÍS DESARROLLANDO SU LÍNEA PROTEICA DE LA
-            MANO DE LA PRESENTACIÓN DE "ZERO WITH PROTEIN".</p>
+        <div class="grid-item grid-text">
+          <h2 class="style-title">MÁS ALLÁ DE LAS BARRERAS</h2>
+          <p class="style-subtitle ">ATLETAS DE CLASE MUNDIAL EN BUSCA DE LOGRAR SUS SUEÑOS Y ALIMENTADOS PARA
+            DESBLOQUEAR LO MEJOR.</p>
+        </div>
+        <div class="grid-item grid-img">
+          <img src="Imagenes/img-carrra-gatorade.jpg" alt="carras Gatorade" class="img-main">
+        </div>
+        <div class="grid-item grid-text">
+          <h2 class="style-title">CARRERAS GATORADE</h2>
+          <p class="style-subtitle ">CADA ATLETA ES ÚNICO EN SU BÚSQUEDA.PERO LA COMUNIDAD NOS HACE ESTAR UNIDOS POR
+            DEPORTE.</p>
         </div>
       </div>
-    </header>
+    </section>
   </main>
   <footer>
-    <div>
-      <img src="Imagenes/logo-nav.svg" alt="logo Gatorade">
-      <p>© 2021 Company, Inc</p>
-      <button> IMG TW</button>
-      <button> IMG TW</button>
-      <button> IMG TW</button>
+    <div class="footer-conteiner">
+      <div class="footer-conteiner">
+        <img src="Imagenes/logo-nav.svg" alt="logo Gatorade" class="img-footer">
+        <p>© 2021 Designed by Gianni Lupo, Inc. Todos los derechos reservados.</p>
+      </div>
+      <div class="button-conteiner">
+        <button class="css-button-shadow-border-sliding--black"><i class="fas fa-hashtag"></i></button>
+        <button class="css-button-shadow-border-sliding--black"><i class="fab fa-facebook"></i></button>
+        <button class="css-button-shadow-border-sliding--black"><i class="fab fa-whatsapp-square"></i></button>
+      </div>
     </div>
   </footer>
 </body>
-
 </html>
