--- a/shop.html
+++ b/shop.html
@@ -1,71 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="shortcut icon" href="Imagenes/logo-nav.svg" type="image/x-icon">
+    <title>Shop | Gatorade </title>
+    <link rel="stylesheet" href="Estilos/header.css">
+    <link rel="stylesheet" href="Estilos/style.css">
+    <link rel="stylesheet" href="Estilos/navbar.css">
+    <link rel="stylesheet" href="Estilos/footer.css">
+    <link rel="stylesheet" href="Estilos/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/8fb73b6fbd.js" crossorigin="anonymous"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Kanit:ital,wght@1,100&family=Oswald:wght@600&family=Poppins&display=swap"
+        rel="stylesheet">
 </head>
-<body>
-    <header>
 
-    </header>
+<body>
     <nav>
-        <img src="Imagenes/logo-nav.svg" alt="imagen logo Gatorade">
-        <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="shop.html">Shop</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="nosotros.html">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="carro.html">Carro</a>
-        </li>
-      </ul>
+        <img src="Imagenes/logo-nav.svg" alt="imagen logo Gatorade" id="logo-nav">
+        <ul id="ul-navbar">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="shop.html">Shop</a>
+            </li>
+            <li>
+                <a href="nosotros.html">Nosotros</a>
+            </li>
+            <li>
+                <a href="contacto.html">Contacto</a>
+            </li>
+        </ul>
     </nav>
+    <header id="header" style="background-image: url(/Imagenes/img-gatorade-shop.jpg);">
+        <div id="title-conteiner">
+            <div>
+                <p class="title-header" id="title-primario">SHOP OFICIAL GATORADE</p>
+            </div>
+        </div>
+    </header>
     <main>
-        <img src="img-gatorade-shop.jpg" alt="Shop Gatorade">
-        <h1>SHOP OFICIAL GATORADE</h1>
+        <section id="grid-productos">
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="Imagenes/Botella-deportiva.png" alt="Botella deportiva Gatorade">
+                    </div>
+                    <div class="contentBx">
+                        <h2>Botella Deportiva</h2>
+                        <br>
+                        <div class="color">
+                            <h3>Color :</h3>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <br>
+                        <a href="#">COMPRAR AHORA</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="Imagenes/botella-pro.png" alt="Botella Pro Gatorade">
+                    </div>
+                    <div class="contentBx">
+                        <h2>Botella Pro</h2>
+                        <br>
+                        <div class="color">
+                            <h3>Color :</h3>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <br>
+                        <a href="#">COMPRAR AHORA</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="Imagenes/botellon.png" alt="Botellon deportiva Gatorade">
+                    </div>
+                    <div class="contentBx">
+                        <h2>Botellon Deportiva</h2>
+                        <br>
+                        <div class="color">
+                            <h3>Color :</h3>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <br>
+                        <a href="#">COMPRAR AHORA</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="Imagenes/img-botx6-shop.png" alt="Botella deportiva x6 Gatorade">
+                    </div>
+                    <div class="contentBx">
+                        <h2>Pack X6 Botella Deportiva</h2>
+                        <br>
+                        <div class="color">
+                            <h3>Color :</h3>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <br>
+                        <a href="#">COMPRAR AHORA</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="Imagenes/toalla.png" alt="Botella deportiva Gatorade">
+                    </div>
+                    <div class="contentBx">
+                        <h2>Toalla Deportiva</h2>
+                        <br>
+                        <div class="color">
+                            <h3>Color :</h3>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <br>
+                        <a href="#">COMPRAR AHORA</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="Imagenes/img-shaker-shop.png" alt="Shaker Gatorade">
+                    </div>
+                    <div class="contentBx">
+                        <h2>Shaker</h2>
+                        <br>
+                        <div class="color">
+                            <h3>Color :</h3>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <br>
+                        <a href="#">COMPRAR AHORA</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <section>
-        <div>
-            <h2>Gatorade Grip Bottle</h2>
-            <img src="img-botella-shop.jpg" alt="Bottle Grip">
-            <button>Añadir al carro</button>
-        </div>
-        <div>
-            <h2>Gatorade Shaker</h2>
-            <img src="img-shaker-shop.png" alt="Shaker">
-            <button>Añadir al carro</button>
-        </div>
-        <div>
-            <h2>Gatorade Refrigerator 3L</h2>
-            <img src="img-refrigerante-shop.jpg" alt="Refrigerator">
-            <button>Añadir al carro</button>
-        </div>
-        <div>
-            <h2>Gatorade Sideline Towel</h2>
-            <img src="img-toalla-shop.jpg" alt="Towel">
-            <button>Añadir al carro</button>
-        </div>
-        <div>
-            <h2>Gatorade 6Pack Bottle Carrier</h2>
-            <img src="img-botx6-shop.png" alt="6Pack Bottle">
-            <button>Añadir al carro</button>
-        </div>
-    </section>
     <footer>
-        <div>
-            <img src="Imagenes/logo-nav.svg" alt="logo Gatorade">    
-            <p>© 2021 Company, Inc</p>
-            <button> IMG TW</button>
-            <button> IMG TW</button>
-            <button> IMG TW</button>
-        </div>    
+        <div class="footer-conteiner">
+            <div class="footer-conteiner">
+                <img src="Imagenes/logo-nav.svg" alt="logo Gatorade" class="img-footer">
+                <p>© 2021 Designed by Gianni Lupo, Inc. Todos los derechos reservados.</p>
+            </div>
+            <div class="button-conteiner">
+                <button class="css-button-shadow-border-sliding--black"><i class="fas fa-hashtag"></i></button>
+                <button class="css-button-shadow-border-sliding--black"><i class="fab fa-facebook"></i></button>
+                <button class="css-button-shadow-border-sliding--black"><i class="fab fa-whatsapp-square"></i></button>
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
