Se realizaron medias query y se hizo resposive el proyecyo

--- a/shop.html
+++ b/shop.html
@@ -64,7 +64,7 @@
                             <span></span>
                         </div>
                         <br>
-                        <a href="#">COMPRAR AHORA</a>
+                        <a href="#" class="css-button-arrow--grey">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                         <img src="Imagenes/botella-pro.png" alt="Botella Pro Gatorade">
                     </div>
                     <div class="contentBx">
-                        <h2>Botella Pro</h2>
+                        <h2>Botella G-Pro</h2>
                         <br>
                         <div class="color">
                             <h3>Color :</h3>
@@ -83,7 +83,7 @@
                             <span></span>
                         </div>
                         <br>
-                        <a href="#">COMPRAR AHORA</a>
+                        <a href="#" class="css-button-arrow--grey">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                             <span></span>
                         </div>
                         <br>
-                        <a href="#">COMPRAR AHORA</a>
+                        <a href="#" class="css-button-arrow--grey">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                             <span></span>
                         </div>
                         <br>
-                        <a href="#">COMPRAR AHORA</a>
+                        <a href="#" class="css-button-arrow--grey">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                             <span></span>
                         </div>
                         <br>
-                        <a href="#">COMPRAR AHORA</a>
+                        <a href="#" class="css-button-arrow--grey">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                             <span></span>
                         </div>
                         <br>
-                        <a href="#">COMPRAR AHORA</a>
+                        <a href="#" class="css-button-arrow--grey">COMPRAR</a>
                     </div>
                 </div>
             </div>
