--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="shortcut icon" href="Imagenes/logo-nav.svg" type="image/x-icon">
-    <title> Carro | Gatorade </title>
+    <title> Contacto | Gatorade </title>
     <link rel="stylesheet" href="Estilos/header.css">
     <link rel="stylesheet" href="Estilos/style.css">
     <link rel="stylesheet" href="Estilos/navbar.css">
@@ -23,7 +23,6 @@
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Kanit:ital,wght@1,100&family=Oswald:wght@600&family=Poppins&display=swap"
         rel="stylesheet">
 </head>
-
 <body>
     <nav>
         <img src="Imagenes/logo-nav.svg" alt="imagen logo Gatorade" id="logo-nav">
